# Github-ActionsLab-

./: .gitignore  LAB_REQUIREMENTS.md  Makefile  all needed code.ipynb  pyproject.toml
.github/workflows/: CI.yml
configs/: config.toml
src/data/: preprocess.py  validate.py
src/features/: engineer.py
src/models/: classify.py  train.py
src/reports/: generate_report.py
tests/: test_preprocess.py
